Added the javascript file with my (for now) final code

--- a/index.html
+++ b/index.html
@@ -6,19 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>RPS Project</title>
+  <script src="rps.js"></script>
 </head>
 
 <body>
-  <script>
-    console.log("HW");
-
-  </script>
-
-
-
-
-
-
+  <h1>Its RPS in the Console!</h1>
+  <h2>Go ahead and open up the console to play!</h2>
 </body>
 
 </html>
