buttons working to pick an option and then compares it to computer. Not working is the loop to play 5 rounds and computers randomization.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>RPS Project</title>
-  <script src="rps.js"></script>
+  <script async src="rps.js"></script>
 </head>
 
 <body>
-  <h1>Its RPS in the Console!</h1>
-  <h2>Go ahead and open up the console to play!</h2>
+  <h1>Its RPS</h1>
+  <h2>Use the buttons to play!</h2>
+  <button id="choices" value="rock">Rock</button>
+  <button id="choices" value="paper">Paper</button>
+  <button id="choices" value="scissors">Scissors</button>
+  <div id="pScore">Player Score: </div>
+  <div id="cScore">Computer Score: </div>
+  <div>
+    <button id="pA">Play Again?</button>
+  </div>
 </body>
 
 </html>
