(I think) final code on the logic side. Will need some tweaking when adding CSS, all buttons working.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <h1>Its RPS</h1>
   <h2>Use the buttons to play!</h2>
-  <button id="choices" value="rock">Rock</button>
-  <button id="choices" value="paper">Paper</button>
-  <button id="choices" value="scissors">Scissors</button>
+  <button id="b1" value="rock">Rock</button>
+  <button id="b2" value="paper">Paper</button>
+  <button id="b3" value="scissors">Scissors</button>
   <div id="pScore">Player Score: </div>
   <div id="cScore">Computer Score: </div>
   <div>
